Switch to Java 8 (was 17) to match Apache FOP